1.更新支付宝功能代码 2.增加了微信分享 3.更新购物车和订单按店铺分类及功能优化 4.新增收货地址增删改查接口 5.修复忘记密码和注册bug 6.新增提交订单接口

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">金雀好钢</string>
+    <string name="app_name">金雀钢城</string>
     <array name="tab_title">
         <item>全部</item>
         <item>待付款</item>
